<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_screen_root_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.nmotion.android.view.TopPanelLayout
        android:id="@+id/top_panel_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_hint_password"
                android:inputType="textPassword" >
            </EditText>

            <EditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_hint_confirm_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_hint_first_name"
                android:inputType="textPersonName" >
            </EditText>

            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_hint_last_name"
                android:inputType="textPersonName" />
            <Button
                android:id="@+id/button_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_red_btn_background_selector"
                android:onClick="onEditProfileClick"
                android:text="@string/txt_update" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>