<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.nmotion.android.view.TopPanelLayout
        android:id="@+id/top_panel_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:gravity="center"
        android:text="@string/txt_your_credit_cards"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:choiceMode="singleChoice" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/your_credit_cards_empty"
        android:visibility="gone" />

    <ViewAnimator
        android:id="@+id/cc_edit_animator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inAnimation="@anim/slide_in_up"
        android:outAnimation="@anim/slide_out_down" >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_red_btn_background_selector"
            android:onClick="onAddNewCardClick"
            android:text="@string/txt_add_new_credit_card" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onDeleteCardClick"
                android:text="@string/txt_delete" />

            <Button
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onEditCardClick"
                android:text="@string/txt_edit" />

            <Button
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onAddNewCardClick"
                android:text="@string/txt_add_new" />
        </LinearLayout>
    </ViewAnimator>

</LinearLayout>