<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/layout_top" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/registration_screen_email_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/txt_hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/registration_screen_password_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/txt_hint_password_6_characters"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/registration_screen_confirm_password_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/txt_hint_confirm_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/registration_screen_first_name_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/txt_hint_first_name"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/registration_screen_last_name_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/txt_hint_last_name"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:textSize="14sp" />
            <Button
                android:id="@+id/register_screen_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/gray_red_btn_background_selector"
                android:text="@string/txt_register"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <CheckBox
                    android:id="@+id/check_terms_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/txt_i_agree_to_the"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/terms_conditions_text_view_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:clickable="true"
                    android:text="@string/txt_terms_and_conditions"
                    android:textColor="@color/nmtn_blue"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>