<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_screen_root_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/layout_top" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/nmtn_blue"
                android:gravity="center_horizontal"
                android:paddingBottom="20dip"
                android:paddingTop="20dp"
                android:text="@string/txt_sign_in_your_account"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/login_screen_email_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/txt_hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="50" >
            </EditText>

            <EditText
                android:id="@+id/login_screen_password_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_hint_password"
                android:inputType="textPassword"
                android:maxLength="20" >
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" >
                <Button
                    android:id="@+id/login_screen_forgot_password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/gray_red_btn_background_selector"
                    android:text="@string/txt_fogot"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_remember"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
                <Button
                    android:id="@+id/login_screen_register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/gray_red_btn_background_selector"
                    android:text="@string/txt_register"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/login_screen_ok_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/gray_red_btn_background_selector"
                    android:text="@string/txt_sign_in"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/com_facebook_loginbutton_blue"
                android:gravity="center"
                android:onClick="onLoginViaFacebookClick"
                android:paddingLeft="55dp"
                android:paddingRight="10dp"
                android:text="@string/txt_login_with_facebook"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>